Fix width on ios

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,13 +32,16 @@ footer, header, hgroup, menu, nav, section {
 
 html, body {
 	height: 600vh;
-	max-width: 100vw;
+	width: 100vw;
 	cursor: url(/images/cursor.png), auto;
+	margin: 0;
+	padding: 0;
 }
 
 body {
 	line-height: 1;
 	overflow-x: hidden;
+	position: relative;
 	/* overflow-y: hidden; */
 }
 
